--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 .header {
@@ -75,10 +78,8 @@ body {
 
 .footer__nav {
     display: flex;
-
     gap: 152px;
     margin: 20px 0;
-
 }
 
 .footer__link {
