--- a/style.css
+++ b/style.css
@@ -137,7 +137,9 @@ body {
 
 @media (min-width: 360px) and (max-width: 767px) {
     .header {
-        gap: 50px;
+        justify-content: space-between;
+        gap: 0;
+        padding: 19px 15px;
       }
 
     .header__logo {
@@ -162,7 +164,7 @@ body {
         flex-wrap: wrap;
         justify-content: space-between; 
         gap: 60px;                    
-        padding: 20px 15px;
+        padding: 30px;
       }
       
       .footer__link {
